--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -1,10 +1,18 @@
+#show-menu
+    display: none
+
+#close
+    position: absolute
+    top: 5%
+    left: 10%
+
 .nav
     position: fixed
     z-index: 1000
     width: 100%
-    height: 12.5vh
+    height: 12vh
     display: flex
-    justify-content: space-around
+    justify-content: space-between
     align-items: center
     background-color: #eee0a1
     font-weight: bold
@@ -12,21 +20,59 @@
         font-size: 100%
         height: 8vh
     @media only screen and (min-width: 1024px)
-        font-size: 175%
-    .nav-menu
-        &__item
-            font-size: 70%
-            color: black
-            margin-left: 3%
-            @media only screen and (min-width: 1024px)
-                font-size: 100%
-                margin-left: 5%
-            @media only screen and (min-width: 1400px)
-                font-size: 100%
-                
-            &:hover
-                cursor: pointer
-                transform: scale(1.1) perspective(1px)
+        font-size: 135%
+
+.nav-menu
+    &__hamburguer-icon
+        display: flex
+        flex-direction: column
+        justify-content: center
+        cursor: pointer
+        width: 20%
+        align-items: center
+        @media only screen and (min-width: 1024px)
+            width: 20%
+        &:hover
+            cursor: pointer
+.fas
+    font-size: 140%
+
+.menu-show
+    display: flex
+    position: absolute
+    top: 0
+    height: 100vh
+    width: 100vw
+    background-color: white
+    cursor: pointer
+    color: black
+
+.menu-hide
+    display: none
+
+.menu_list
+    flex-direction: column
+    justify-content: space-around
+
+
+.list
+    display: flex
+    flex-direction: column
+    width: 100%
+    justify-content: space-evenly
+    align-items: center
+    list-style: none
+    cursor: pointer
+    background-color: #eee0a1
+    border: none
+    &__item
+        color: black
+        font-size: 150%
+        font-family: 'Acme', sans-serif
+        &:hover
+            cursor: pointer
+            transform: scale(1.1) perspective(1px)
+
 
 .socialmedia
     width: 35%
