--- a/my-website-app/src/components/Music-letters/index.sass
+++ b/my-website-app/src/components/Music-letters/index.sass
@@ -15,7 +15,7 @@
             margin-top: -2%
        
 
-.skybeer
+.music-letters
     @media only screen and (max-width: 1023px)
         position: absolute
         display: flex
@@ -27,7 +27,7 @@
         position: absolute
         display: flex
         flex-direction: row
-        top: 11vh
+        top: 13.5vh
         width: 98vw
         height: 88vh
         padding: 1%
@@ -86,7 +86,7 @@
                 justify-content: flex-start
                 flex-direction: column
                 align-self: center
-                margin-top: -3.5%
+                margin-top: -2%
                 line-height: 17px
                 font-size: 70%
             @media only screen and (min-width: 1024px)
@@ -118,11 +118,11 @@
             flex-direction: column
             align-items: center
             width: 30%
+            margin-top: -1%
             @media only screen and (max-width: 1023px)
                 flex-direction: row
                 width: 100%
                 justify-content: space-around
-                margin-top: 3%
             .code
                 display: flex
                 flex-direction: column
@@ -149,7 +149,7 @@
                 flex-direction: column
                 justify-content: center
                 height: 50%
-                margin-top: 5%
+                margin-bottom: 5%
                 @media only screen and (max-width: 1023px)
                     margin-bottom: 0
 
