--- a/my-website-app/src/components/Adevinta-vanilla/index.sass
+++ b/my-website-app/src/components/Adevinta-vanilla/index.sass
@@ -1,27 +1,54 @@
+#back-button
+        color: black
+        font-size: 300%
+        width: 8%
+        align-self: center
+        display: flex
+        justify-content: center
+        margin-right: 1.5%
+        &:hover
+            cursor: pointer
+            transform: scale(1.1) perspective(1px)
+        @media only screen and (max-width: 1023px)
+            margin-right: 0
+            margin-bottom: 8%
+            margin-top: -2%
+       
+
 .adevinta
     @media only screen and (max-width: 1023px)
         position: absolute
         display: flex
         flex-direction: column
-        top: 12vh
+        top: 10vh
         width: 100vw
-        padding: 3%
-        margin-top: 2%
+        padding: 4%
     @media only screen and (min-width: 1024px)
         position: absolute
         display: flex
-        flex-direction: column
-        top: 13.5vh
-        left: 5vw
-        width: 90vw
+        flex-direction: row
+        top: 11vh
+        width: 98vw
         height: 88vh
         padding: 1%
+
     .box
         display: flex
         flex-direction: column
         height: 100%
         width: 100%
         align-self: center
+        &__title
+            color: black
+            @media only screen and (max-width: 1023px)
+                margin-top: 3.5%
+                font-size: 160%
+                font-family: 'Baloo Bhai'
+                margin-bottom: 4%
+            @media only screen and (min-width: 1024px)
+                font-size: 1.3rem
+                font-family: 'Baloo Bhai'
+                margin-bottom: 2%
         .images
             @media only screen and (max-width: 1023px)
                 display: flex
@@ -63,14 +90,12 @@
                 line-height: 17px
                 font-size: 70%
             @media only screen and (min-width: 1024px)
-                width: 100%
-                height: 45%
+                width: 70%
                 padding: 1%
                 display: flex
                 justify-content: center
                 flex-direction: column
-                align-self: center
-                margin-top: -2.5%
+                align-self: flex-start
                 letter-spacing: 1px
                 line-height: 22px
                 font-size: 80%
@@ -84,44 +109,53 @@
                     font-family: 'Baloo Bhai'
                     margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
-                    margin-top: 0.5%
                     font-size: 120%
                     font-family: 'Baloo Bhai'
 
-        &__direct-access
+        .urls
+            padding: 1%
+            display: flex
+            flex-direction: column
+            align-items: center
+            width: 30%
             @media only screen and (max-width: 1023px)
-                width: 100%
-                height: 3rem
-                display: flex
                 flex-direction: row
-                align-items: center
-            @media only screen and (min-width: 1024px)
                 width: 100%
-                height: 3rem
+                justify-content: space-around
+            .code
                 display: flex
-                flex-direction: row
-                align-items: center
-        &__message    
-            @media only screen and (max-width: 1023px)
-                width: 68%
-            @media only screen and (min-width: 1024px)
-                width: 54%
-        &__container
-            width: 10%    
-            margin-left: 3% 
-        &__icon
-            max-width: 10vw
-            max-height: 12vh
-            margin: 0.5%
-            @media only screen and (max-width: 1023px)
-                width: 90%
-                margin-left: 20%
-            @media only screen and (min-width: 1024px)
-                width: 30%  
-                margin-left: -35%
-            @media only screen and (min-width: 1400px)
-                width: 23%  
-                margin-left: -212%
-            &:hover
-                cursor: pointer
-                transform: scale(1.2) perspective(1px)
+                flex-direction: column
+                justify-content: space-evenly
+                height: 50%
+                &__title
+                    color: black
+                    @media only screen and (max-width: 1023px)
+                        margin-top: 3.5%
+                        font-size: 160%
+                        font-family: 'Baloo Bhai'
+                        margin-bottom: 2%
+                    @media only screen and (min-width: 1024px)
+                        font-size: 1.3rem
+                        font-family: 'Baloo Bhai'
+                &__container 
+                    align-self: center
+                &__icon
+                    height: 3rem
+                    width: 3rem
+                    cursor: pointer
+            &__demo
+                display: flex
+                flex-direction: column
+                justify-content: center
+                height: 50%
+                margin-top: 5%
+                @media only screen and (max-width: 1023px)
+                    margin-bottom: 0
+
+.infoAndUrls
+    display: flex
+    margin-top: 2%
+    margin-left: 2%
+    @media only screen and (max-width: 1023px)
+        flex-direction: column
+        margin-top: 4%
