--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -11,12 +11,8 @@
         @media only screen and (max-width: 1023px)
             width: 100%
             display: flex
-            flex-direction: column
+            flex-direction: row
             flex-wrap: wrap
-            // display: grid
-            // grid-template-areas: "padel" "beer" "portfolio" "gnomesreact" "gnomesredux" "adevinta"
-            // grid-template-rows: 18% 18% 18% 18% 18% 18%
-            // grid-template-columns: 100%
 
             overflow-x: auto
             align-items: center
@@ -27,10 +23,6 @@
             display: flex
             flex-direction: row
             flex-wrap: wrap
-            // display: grid
-            // grid-template-areas: "padel adevinta gnomesreact" "beer beer beer" "gnomesredux gnomesredux portfolio"
-            // grid-template-rows: 33% 33% 33% 
-            // grid-template-columns: 33% 33% 34% 
 
             overflow: auto
             align-items: center
@@ -41,15 +33,18 @@
         .nav-menu
             &__item-container1
                 //grid-area: padel
-                width: 33.33%
-                height: 20rem
                 cursor: pointer
+                height: 19rem
+                width: 100%
                 background: url("/img/padel-bg.jpg")
                 background-repeat: no-repeat
                 background-size: 100% 100%
-                @media only screen and (max-width: 1023px)
+                @media only screen and (min-width: 500px)
                     height: 19rem
-                    width: 100%
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
             &__item1
                 height: 100%
                 //width: 100vw
@@ -86,15 +81,18 @@
 
             &__item-container2
                 //grid-area: beer
-                width: 33.33%
-                height: 20rem
+                height: 19rem
+                width: 100%
                 cursor: pointer
                 background: url("/img/beer-bg.jpg")
                 background-repeat: no-repeat
                 background-size: cover
-                @media only screen and (max-width: 1023px)
+                @media only screen and (min-width: 500px)
                     height: 19rem
-                    width: 100%
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
             &__item2
                 height: 100%
                 //width: 100vw
@@ -131,15 +129,18 @@
 
             &__item-container3
                 //grid-area: portfolio
-                width: 33.33%
-                height: 20rem
+                height: 19rem
+                width: 100%
                 cursor: pointer
                 background: url("/img/portfolio-bg.jpg")
                 background-repeat: no-repeat
                 background-size: 100% 100%
-                @media only screen and (max-width: 1023px)
+                @media only screen and (min-width: 500px)
                     height: 19rem
-                    width: 100%
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
             &__item3
                 height: 100%
                 //width: 100vw
@@ -176,15 +177,18 @@
 
             &__item-container4
                 //grid-area: gnomesreact
-                width: 33.33%
-                height: 20rem
+                width: 100%
+                height: 19rem
                 cursor: pointer
                 background: url("/img/gnomesworld-bg.jpg")
                 background-repeat: no-repeat
                 background-size: cover
-                @media only screen and (max-width: 1023px)
+                @media only screen and (min-width: 500px)
                     height: 19rem
-                    width: 100%
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
             &__item4
                 height: 100%
                 //width: 100vw
@@ -221,15 +225,18 @@
 
             &__item-container5
                 //grid-area: gnomesredux
-                width: 33.33%
-                height: 20rem
+                width: 100%
+                height: 19rem
                 cursor: pointer
                 background: url("/img/filmstore-bg.jpg")
                 background-repeat: no-repeat
                 background-size: cover
-                @media only screen and (max-width: 1023px)
+                @media only screen and (min-width: 500px)
                     height: 19rem
-                    width: 100%
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
             &__item5
                 height: 100%
                 //width: 100vw
@@ -266,15 +273,18 @@
 
             &__item-container6
                 //grid-area: adevinta
-                width: 33.33%
-                height: 20rem
+                width: 100%
+                height: 19rem
                 cursor: pointer
                 background: url("/img/gnomesworld2-bg.jpg")
                 background-repeat: no-repeat
                 background-size: cover
-                @media only screen and (max-width: 1023px)
+                @media only screen and (min-width: 500px)
                     height: 19rem
-                    width: 100%
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
             &__item6
                 height: 100%
                 //width: 100vw
@@ -283,6 +293,150 @@
                 align-items: center
                 -webkit-text-stroke: 0.2px black
                 color: #c320d8
+                font-family: 'Baloo Bhai'
+                font-size: 160%
+                text-decoration: none
+                opacity: 0
+                transform: scale(0.5)
+                -ms-transform: scale(0.5) // IE 9
+                -moz-transform: scale(0.5) // Firefox
+                -webkit-transform: scale(0.5) // Safari and Chrome
+                -o-transform: scale(0.5) // Opera
+                -webkit-transition: all 500ms ease-in-out // IE 9
+                -moz-transition: all 500ms ease-in-out // Firefox
+                -ms-transition: all 500ms ease-in-out // Safari and Chrome
+                -o-transition: all 500ms ease-in-out // Opera
+                @media only screen and (max-width: 1023px)
+                    opacity: 1
+                    font-size: 6rem
+                    text-align: center
+                &:hover
+                    cursor: pointer
+                    opacity: 1
+                    transform: scale(0.8)
+                    -ms-transform: scale(0.8) // IE 9
+                    -moz-transform: scale(0.8) // Firefox
+                    -webkit-transform: scale(0.8) // Safari and Chrome
+                    -o-transform: scale(0.8) // Opera
+
+            &__item-container7
+                //grid-area: adevinta
+                width: 100%
+                height: 19rem
+                cursor: pointer
+                background: url("/img/music-bg.jpg")
+                background-repeat: no-repeat
+                background-size: cover
+                @media only screen and (min-width: 500px)
+                    height: 19rem
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
+            &__item7
+                height: 100%
+                //width: 100vw
+                display: flex
+                justify-content: center
+                align-items: center
+                -webkit-text-stroke: 0.2px black
+                color: #e78535
+                font-family: 'Baloo Bhai'
+                font-size: 160%
+                text-decoration: none
+                opacity: 0
+                transform: scale(0.5)
+                -ms-transform: scale(0.5) // IE 9
+                -moz-transform: scale(0.5) // Firefox
+                -webkit-transform: scale(0.5) // Safari and Chrome
+                -o-transform: scale(0.5) // Opera
+                -webkit-transition: all 500ms ease-in-out // IE 9
+                -moz-transition: all 500ms ease-in-out // Firefox
+                -ms-transition: all 500ms ease-in-out // Safari and Chrome
+                -o-transition: all 500ms ease-in-out // Opera
+                @media only screen and (max-width: 1023px)
+                    opacity: 1
+                    font-size: 6rem
+                    text-align: center
+                &:hover
+                    cursor: pointer
+                    opacity: 1
+                    transform: scale(0.8)
+                    -ms-transform: scale(0.8) // IE 9
+                    -moz-transform: scale(0.8) // Firefox
+                    -webkit-transform: scale(0.8) // Safari and Chrome
+                    -o-transform: scale(0.8) // Opera
+
+            &__item-container8
+                //grid-area: adevinta
+                width: 100%
+                height: 19rem
+                cursor: pointer
+                background: url("/img/games-bg.jpg")
+                background-repeat: no-repeat
+                background-size: cover
+                @media only screen and (min-width: 500px)
+                    height: 19rem
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
+            &__item8
+                height: 100%
+                //width: 100vw
+                display: flex
+                justify-content: center
+                align-items: center
+                -webkit-text-stroke: 0.2px black
+                color: #2246e7
+                font-family: 'Baloo Bhai'
+                font-size: 160%
+                text-decoration: none
+                opacity: 0
+                transform: scale(0.5)
+                -ms-transform: scale(0.5) // IE 9
+                -moz-transform: scale(0.5) // Firefox
+                -webkit-transform: scale(0.5) // Safari and Chrome
+                -o-transform: scale(0.5) // Opera
+                -webkit-transition: all 500ms ease-in-out // IE 9
+                -moz-transition: all 500ms ease-in-out // Firefox
+                -ms-transition: all 500ms ease-in-out // Safari and Chrome
+                -o-transition: all 500ms ease-in-out // Opera
+                @media only screen and (max-width: 1023px)
+                    opacity: 1
+                    font-size: 6rem
+                    text-align: center
+                &:hover
+                    cursor: pointer
+                    opacity: 1
+                    transform: scale(0.8)
+                    -ms-transform: scale(0.8) // IE 9
+                    -moz-transform: scale(0.8) // Firefox
+                    -webkit-transform: scale(0.8) // Safari and Chrome
+                    -o-transform: scale(0.8) // Opera
+
+            &__item-container9
+                //grid-area: adevinta
+                width: 100%
+                height: 19rem
+                cursor: pointer
+                background: url("/img/expenses-bg.jpg")
+                background-repeat: no-repeat
+                background-size: cover
+                @media only screen and (min-width: 500px)
+                    height: 19rem
+                    width: 50%
+                @media only screen and (min-width: 1024px)
+                    height: 20rem
+                    width: 33.33%
+            &__item9
+                height: 100%
+                //width: 100vw
+                display: flex
+                justify-content: center
+                align-items: center
+                -webkit-text-stroke: 0.2px black
+                color: #13b313
                 font-family: 'Baloo Bhai'
                 font-size: 160%
                 text-decoration: none
