--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -2,54 +2,52 @@
     font-weight: 900
     font-size: 115%
 .about-me
-    position: absolute
-    top: 7vh
+    height: 100vh
     width: 100vw
     display: flex
     flex-direction: column
     justify-content: center
     background-color: #eee0a1
-    @media only screen and (min-width: 1024px)
-        position: absolute
-        top: 4vh
-        
     .welcome
         display: flex
-        align-self: center
         justify-content: center
-        margin-bottom: 3%
+        align-items: center
+        background-color: #eee0a1
         @media only screen and (max-width: 1023px)
             flex-direction: column
-            display: flex
+            justify-content: center
             align-items: center
+        @media only screen and (max-height: 680px)
+            margin-top: 20%
         &__image
             border: 1px solid
             background-color: whitesmoke
             @media only screen and (max-width: 1023px)
-                height: 200px
+                max-width: 35%;
                 object-fit: contain
                 border-radius: 1rem
                 margin-top: 3%
             @media only screen and (min-width: 1024px)
-                min-width: 30vw
-                max-height: 80vh
+                min-width: 20vw
+                max-height: 40vh
                 border-radius: 3rem
-                margin-left: 1.5%
                 margin-top: 6%
+            @media only screen and (min-width: 1200px)
+                max-height: 60vh
         .info
             width: 62%
             padding: 2%
             border: solid 1px
-            border-radius: 2rem
             letter-spacing: 1px
             margin-top: 6%
-            margin-left: 2%
+            margin-left: 4%
             background-color: #fafafa
             display: flex
             flex-direction: column
             justify-content: space-evenly
             @media only screen and (max-width: 1023px)
                 width: 95%
+                min-height: 26rem
                 margin-top: 5%
                 margin-left: 0
                 margin-bottom: 5%
@@ -64,12 +62,13 @@
                     display: flex
                     justify-content: center
                     margin-bottom: -4%
+                    align-self: baseline
                 @media only screen and (min-width: 1024px)
                     font-size: 220%
                     font-family: 'Acme', sans-serif
                     color: black
                     margin-bottom: 1%
-    
+
             &__text
                 @media only screen and (max-width: 1023px)
                     font-size: 53%
