--- a/my-website-app/src/components/Games-store/index.sass
+++ b/my-website-app/src/components/Games-store/index.sass
@@ -68,15 +68,16 @@
                 border-bottom: solid 1px
             &__image
                 @media only screen and (max-width: 1023px)
-                    width: 19vw
+                    width: 43%
                     height: 23vh
                     align-self: center
                     margin-bottom: 2%
                 @media only screen and (min-width: 1024px)
-                    width: 13vw
-                    height: 44vh
+                    width: 35vw
+                    height: 40vh
                     align-self: center
                     margin-bottom: 2%
+                    border: 1px solid
         &__project-info
             @media only screen and (max-width: 1023px)
                 width: 100%
