--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -36,7 +36,7 @@
                     box-shadow: 5px 5px 15px black
                     color: whitesmoke
                     font-family: 'Acme', sans-serif
-                    margin-top: 1%
+                    margin-top: 3.5%
                     @media only screen and (max-width: 1023px)
                         margin-top: 1%
                         width: 55%
@@ -57,6 +57,7 @@
         width: 100%
         font-family: 'Acme', sans-serif
         color: goldenrod
+        margin-bottom: 2%
         @media only screen and (max-width: 1023px)
             font-size: 250%
             justify-content: center
@@ -113,7 +114,6 @@
     justify-content: center
     width: 100%
     font-size: 200%
-    margin: 3rem
     align-items: center
     @media only screen and (max-width: 1023px)
         font-size: 90%
