--- a/my-website-app/src/components/Contact/index.sass
+++ b/my-website-app/src/components/Contact/index.sass
@@ -24,6 +24,8 @@
         height: 40%
         @media only screen and (max-width: 1023px)
             width: 80%
+            margin-top: 0
+            margin-bottom: -15%
     .download-cv
         padding: 1rem
         background-color: #0000
