--- a/my-website-app/src/components/Expenses-tracker/index.sass
+++ b/my-website-app/src/components/Expenses-tracker/index.sass
@@ -53,6 +53,7 @@
             @media only screen and (max-width: 1023px)
                 display: flex
                 flex-direction: row
+                flex-wrap: wrap
                 justify-content: space-evenly
                 align-self: center
                 height: 40%
@@ -68,10 +69,11 @@
                 border-bottom: solid 1px
             &__image
                 @media only screen and (max-width: 1023px)
-                    width: 43%
-                    height: 23vh
+                    width: 75%
+                    height: 21vh
                     align-self: center
                     margin-bottom: 2%
+                    border: 1px solid
                 @media only screen and (min-width: 1024px)
                     width: 35vw
                     height: 40vh
