--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -71,13 +71,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(1)
-                    -ms-transform: scale(1) // IE 9
-                    -moz-transform: scale(1) // Firefox
-                    -webkit-transform: scale(1) // Safari and Chrome
-                    -o-transform: scale(1) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
 
             &__item-container2
                 //grid-area: beer
@@ -119,13 +120,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(1)
-                    -ms-transform: scale(1) // IE 9
-                    -moz-transform: scale(1) // Firefox
-                    -webkit-transform: scale(1) // Safari and Chrome
-                    -o-transform: scale(1) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
 
             &__item-container3
                 //grid-area: portfolio
@@ -167,13 +169,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(1)
-                    -ms-transform: scale(1) // IE 9
-                    -moz-transform: scale(1) // Firefox
-                    -webkit-transform: scale(1) // Safari and Chrome
-                    -o-transform: scale(1) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
 
             &__item-container4
                 //grid-area: gnomesreact
@@ -215,13 +218,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(0.8)
-                    -ms-transform: scale(0.8) // IE 9
-                    -moz-transform: scale(0.8) // Firefox
-                    -webkit-transform: scale(0.8) // Safari and Chrome
-                    -o-transform: scale(0.8) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(0.8)
+                        -ms-transform: scale(0.8) // IE 9
+                        -moz-transform: scale(0.8) // Firefox
+                        -webkit-transform: scale(0.8) // Safari and Chrome
+                        -o-transform: scale(0.8) // Opera
 
             &__item-container5
                 //grid-area: gnomesredux
@@ -263,13 +267,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(1)
-                    -ms-transform: scale(1) // IE 9
-                    -moz-transform: scale(1) // Firefox
-                    -webkit-transform: scale(1) // Safari and Chrome
-                    -o-transform: scale(1) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
 
             &__item-container6
                 //grid-area: adevinta
@@ -311,13 +316,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(0.8)
-                    -ms-transform: scale(0.8) // IE 9
-                    -moz-transform: scale(0.8) // Firefox
-                    -webkit-transform: scale(0.8) // Safari and Chrome
-                    -o-transform: scale(0.8) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(0.8)
+                        -ms-transform: scale(0.8) // IE 9
+                        -moz-transform: scale(0.8) // Firefox
+                        -webkit-transform: scale(0.8) // Safari and Chrome
+                        -o-transform: scale(0.8) // Opera
 
             &__item-container7
                 //grid-area: adevinta
@@ -359,13 +365,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(0.8)
-                    -ms-transform: scale(0.8) // IE 9
-                    -moz-transform: scale(0.8) // Firefox
-                    -webkit-transform: scale(0.8) // Safari and Chrome
-                    -o-transform: scale(0.8) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
 
             &__item-container8
                 //grid-area: adevinta
@@ -407,13 +414,14 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(0.8)
-                    -ms-transform: scale(0.8) // IE 9
-                    -moz-transform: scale(0.8) // Firefox
-                    -webkit-transform: scale(0.8) // Safari and Chrome
-                    -o-transform: scale(0.8) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
 
             &__item-container9
                 //grid-area: adevinta
@@ -455,10 +463,11 @@
                     font-size: 6rem
                     text-align: center
                 &:hover
-                    cursor: pointer
-                    opacity: 1
-                    transform: scale(0.8)
-                    -ms-transform: scale(0.8) // IE 9
-                    -moz-transform: scale(0.8) // Firefox
-                    -webkit-transform: scale(0.8) // Safari and Chrome
-                    -o-transform: scale(0.8) // Opera
+                    @media only screen and (min-width: 1023px)
+                        cursor: pointer
+                        opacity: 1
+                        transform: scale(1)
+                        -ms-transform: scale(1) // IE 9
+                        -moz-transform: scale(1) // Firefox
+                        -webkit-transform: scale(1) // Safari and Chrome
+                        -o-transform: scale(1) // Opera
