--- a/my-website-app/src/components/Gnomes-react/index.sass
+++ b/my-website-app/src/components/Gnomes-react/index.sass
@@ -15,7 +15,7 @@
             margin-top: -2%
        
 
-.gnomes-redux
+.gnomes-react
     @media only screen and (max-width: 1023px)
         position: absolute
         display: flex
@@ -54,6 +54,7 @@
                 display: flex
                 flex-direction: row
                 justify-content: space-evenly
+                flex-wrap: wrap
                 align-self: center
                 height: 40%
                 width: 100%
@@ -68,7 +69,7 @@
                 border-bottom: solid 1px
             &__image
                 @media only screen and (max-width: 1023px)
-                    width: 19vw
+                    width: 43%
                     height: 23vh
                     align-self: center
                     margin-bottom: 2%
