--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -115,6 +115,7 @@
     width: 100%
     font-size: 200%
     align-items: center
+    height: 2rem
     @media only screen and (max-width: 1023px)
         font-size: 90%
         margin-top: 0rem
