modified styles, deleted contact compo

--- a/my-website-app/src/components/Header/index.sass
+++ b/my-website-app/src/components/Header/index.sass
@@ -71,8 +71,8 @@
     &__item
         color: black
         font-size: 150%
-        font-family: 'Acme', sans-serif
-        padding: 2rem
+        font-family: 'Roboto', sans-serif
+        padding: 2.6rem
         &:hover
             cursor: pointer
             transform: scale(1.1) perspective(1px)
