--- a/my-website-app/src/components/Projects/index.sass
+++ b/my-website-app/src/components/Projects/index.sass
@@ -515,7 +515,7 @@
                 width: 100%
                 height: 19rem
                 cursor: pointer
-                background: url("/img/gifs-bg.gif")
+                background: url("/img/gif-bg.gif")
                 background-repeat: no-repeat
                 background-size: cover
                 @media only screen and (min-width: 500px)
