--- a/my-website-app/src/components/About-me/index.sass
+++ b/my-website-app/src/components/About-me/index.sass
@@ -2,12 +2,16 @@
     font-weight: 900
     font-size: 115%
 .about-me
+    position: absolute
     height: 100vh
     width: 100vw
     display: flex
-    flex-direction: column
     justify-content: center
+    flex-direction: column
     background-color: #eee0a1
+    @media only screen and (max-width: 1023px)
+        top: 8vh
+        height: auto
     .welcome
         display: flex
         justify-content: center
@@ -17,34 +21,39 @@
             flex-direction: column
             justify-content: center
             align-items: center
-        @media only screen and (max-height: 680px)
-            margin-top: 20%
-        &__image
-            border: 1px solid
-            background-color: whitesmoke
-            @media only screen and (max-width: 1023px)
-                max-width: 35%;
-                object-fit: contain
-                border-radius: 1rem
-                margin-top: 3%
-            @media only screen and (min-width: 1024px)
-                min-width: 20vw
-                max-height: 40vh
-                border-radius: 3rem
-                margin-top: 6%
-            @media only screen and (min-width: 1200px)
-                max-height: 60vh
+        @media only screen and (min-height: 680px)
+            margin-top: 4%
+        .box
+            display: flex
+            flex-direction: column
+            align-items: center
+
+            &__image
+                border: 1px solid
+                background-color: whitesmoke
+                @media only screen and (max-width: 1023px)
+                    max-width: 35%;
+                    margin-top: 3%
+                @media only screen and (min-width: 1024px)
+                    min-width: 20vw
+                    max-height: 40vh
+                    margin-top: 6%
+                @media only screen and (min-width: 1200px)
+                    max-height: 60vh
+        .buttons-container
+            display: flex
+            flex-direction: column
+            align-items: center
+            justify-content: center
+        .button-container
+            width: 30vw
         .info
             width: 62%
             padding: 2%
             border: solid 1px
             letter-spacing: 1px
-            margin-top: 6%
             margin-left: 4%
             background-color: #fafafa
-            display: flex
-            flex-direction: column
-            justify-content: space-evenly
             @media only screen and (max-width: 1023px)
                 width: 95%
                 min-height: 26rem
@@ -58,14 +67,14 @@
             &__title
                 @media only screen and (max-width: 1023px)
                     font-size: 120%
-                    font-family: 'Acme', sans-serif
+                    font-family: 'Roboto', sans-serif
                     display: flex
                     justify-content: center
                     margin-bottom: -4%
                     align-self: baseline
                 @media only screen and (min-width: 1024px)
                     font-size: 220%
-                    font-family: 'Acme', sans-serif
+                    font-family: 'Roboto', sans-serif
                     color: black
                     margin-bottom: 1%
 
