--- a/my-website-app/src/components/Home-page/index.sass
+++ b/my-website-app/src/components/Home-page/index.sass
@@ -8,6 +8,7 @@
         justify-content: center
         align-items: center
         .container
+            background-color: #eee0a1
             display: flex
             flex-direction: column
             justify-content: center
@@ -33,7 +34,7 @@
                     background: goldenrod
                     font-size: 130%
                     border-radius: 1.2rem
-                    box-shadow: 5px 5px 15px black
+                    // box-shadow: 5px 5px 15px black
                     color: whitesmoke
                     font-family: 'Acme', sans-serif
                     margin-top: 3.5%
@@ -55,15 +56,16 @@
         display: flex
         justify-content: center
         width: 100%
-        font-family: 'Acme', sans-serif
-        color: goldenrod
+        font-family: 'Roboto', sans-serif;
+        -webkit-text-stroke: 1px grey
+        color: #f6b93b
         margin-bottom: 2%
         @media only screen and (max-width: 1023px)
             font-size: 250%
             justify-content: center
             margin-top: 11%
         @media only screen and (min-width: 1024px)
-            font-size: 450%
+            font-size: 500%
             margin-top: -5%
     h4
         font-size: 200%
@@ -117,11 +119,39 @@
     align-items: center
     height: 2rem
     @media only screen and (max-width: 1023px)
-        font-size: 90%
-        margin-top: 0rem
-        margin-bottom: 3rem
+        font-size: 85%
+        margin-top: 0.5rem
     &__wrapper
         color: black
-        font-family: 'Acme', sans-serif
+        font-family: 'Roboto', sans-serif
+        font-weight: 500
 
-    
+.button-styles
+    margin-top: 19%
+    font-family: 'Roboto', sans-serif
+    background: #f6b93b
+    color: #ffffff !important
+    font-weight: 500
+    padding: 20px
+    border: 1px solid grey
+    text-transform: uppercase
+    border-radius: 6px
+    display: inline-block
+    transition: all 0.3s ease 0s
+    @media only screen and (max-width: 1023px)
+        margin-top: 9%
+        padding: 14px
+    &:hover
+        margin-top: 16%
+        color: #ffffff !important
+        background: #f6b93b
+        border: 1px solid grey
+        cursor: pointer
+        font-weight: 700 !important
+        letter-spacing: 3px
+        // -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57)
+        // -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57)
+        transition: all 0.3s ease 0s
+        @media only screen and (max-width: 1023px)
+            padding: 14px
+
